manifests/kube-slack.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-slack
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: kube-slack
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ""
      name: kube-slack
      labels:
        app: kube-slack
    spec:
     # Uncomment serviceAccountName if you use RBAC.
      serviceAccountName: kube-slack
      containers:
      - name: kube-slack
        image: willwill/kube-slack:v3.3.0
        resources:
          requests:
            memory: 30M
            cpu: 5m
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
      - key: CriticalAddonsOnly
        operator: Exists
